[package]
name = "tesla"
version = "0.1.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
repository = "https://github.com/zklapow/tesla-rs"
keywords = ["tesla", "api"]
categories = ["api-bindings"]
license = "MIT"
description = "A simple client library for interacting with the Tesla owner API"

[dependencies]
serde = "~1.0"
reqwest = "~0.9"
url = "1.7"
