[package]
name = "tesla"
version = "0.2.1"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
repository = "https://github.com/zklapow/tesla-rs"
keywords = ["tesla", "api"]
categories = ["api-bindings"]
license = "MIT"
description = "A simple client library for interacting with the Tesla owner API"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
url = "1.7"
