[package]
name = "teslac"
version = "0.2.0"
authors = ["Ze'ev Klapow <zklapow@gmail.com>"]
edition = "2018"
repository = "https://github.com/zklapow/tesla-rs"
keywords = ["tesla", "api"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
tesla = { path = "../tesla", version = "0.2"}
toml = "0.5"
serde = "~1.0"
dirs = "2.0"
clap = "~2.33"
flexi_logger = "^0.13.3"
log = "0.4"
ctrlc = "3.1.3"
rpassword = "5.0"
influx_db_client = { git="https://github.com/zklapow/InfluxDBClient-rs" }
native-tls = "0.2.3"
snafu = "0.4.1"
